Fixes an issue with swagger crash #1 https://github.com/wavesplatform/node-docker-image/issues/1